Fixed sidebar text on overflow

--- a/src/components/Analyse.module.css
+++ b/src/components/Analyse.module.css
@@ -2,6 +2,14 @@
 	margin-top: 1em !important;
 }
 
+.header {
+	display: flex;
+}
+
+.header > img {
+	align-self: center;
+}
+
 .resultsContainer {
 	margin-bottom: 25vh;
 }
